<resources>
    <string name="app_name">IntellHome</string>

    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>

    <string name="current">电流</string>
    <string name="voltage">电压</string>
    <string name="electricity">耗电量</string>

    <string name="history">历史</string>
    <string name="search">查询</string>

    <string name="field_required_startDate">请输入正确查询起始日期</string>
    <string name="filed_required_endDate">请输入正确的结束日期</string>

    <string name="device_name_switch">卧室智能开关</string>

    <string name="network_failure">网络故障，请稍后重试</string>
    <string name="title_activity_animation">AnimationActivity</string>

</resources>
