<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".DeviceActivity">

    <LinearLayout
        android:id="@+id/datelayou"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/start_date"
                android:gravity="center"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/et_startDate"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:text="12321"
                android:inputType="datetime"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/end_date"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_weight="0.3"/>

            <EditText
                android:id="@+id/et_endDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:inputType="datetime"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_current"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/current"
            android:layout_weight="0.33"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:text="@string/voltage"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/comsumption"
            android:layout_weight="0.33"
            />
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/linechart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <TextView
        android:id="@+id/tv_deviceInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="电流：220V"
        android:gravity="center"
        android:textSize="20sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"/>
</LinearLayout>
