<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/datelayou"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.13"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_component_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_component_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="10sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <com.zcw.togglebutton.ToggleButton
                android:id="@+id/bt_switch"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_current"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:text="@string/current" />

        <CheckBox
            android:id="@+id/cb_U"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:text="@string/voltage" />

        <CheckBox
            android:id="@+id/cb_electricity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:text="@string/electricity" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line" />

    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/linechart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line" />

    <Button
        android:id="@+id/bt_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history" />

</LinearLayout>